# Crow-s-Nest-clone-

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
.github/workflows/: mainci.yml
Assets/: Jump.anim
Renderer/: Renderer.sln
Renderer/FBXlibrary/: FBXlibrary.sln
Renderer/FBXlibrary/FBXlibrary/: FBXlibrary.vcxproj  FBXlibrary.vcxproj.filters  FbxLibrary.cpp  FbxLibrary.h  FbxUtils.cpp  FbxUtils.h
Renderer/Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters
Renderer/Renderer/Assets/: Idle.mat  Walk.mat
Renderer/Renderer/cpp/: DDSTextureLoader.cpp  blob.cpp  d3d11_renderer_impl.cpp  debug_renderer.cpp  entities.cpp  game_manager.cpp  main.cpp  mesh.cpp  renderer.cpp
Renderer/Renderer/hpp/: d3d11_renderer_impl.hpp  debug_renderer.hpp  entities.hpp  frustum_culling.hpp  game_manager.hpp  math_types.hpp  mbvh.h  mesh.hpp  view.hpp
Renderer/Renderer/shaders/: ps_coloredvertex.cso  ps_cube.cso  ps_meshvertex.cso  ps_smeshvertex.cso  vs_meshvertex.hlsl  vs_smeshvertex.cso
debug_camera_control/: debug_camera_control  debug_camera_control.v
ext/: CMakeLists.txt
ext/soloud/: CMakeLists.txt
res/: simple.vert.spv
res/animations/: Idle.anim  Walk.anim  dying.anim  dying_2.anim  exit_light.anim  guy.anim  guyf.anim  jogging.anim  slasher_attack.anim  slasher_run.anim
res/spv/: blit.spv.frag
res/src/: blit.glsl.frag  simple.vert.glsl
res/textures/: Run.mat  console1_d_purple.dds  console1_d_red.dds  console2.dds  console3_d_red.dds  desk1_2.dds  desk3.dds  door_closed.dds  door_exit.dds  door_off.dds  door_open.dds  exit_light_d.dds  exit_light_s.dds  floor_1.dds  guy.mat  light_box.dds  shadow_full.dds  slasher.mat
res/textures/effect/: dust.dds  star_08.dds  whitePuff00.dds
res/textures/gui/: Crows_Nest.dds  crow-logo.dds  go.dds  pause.dds  select.dds
res/textures/splash/: Logic_Visions2.dds  full-sail-university.160x100.dds
src/: main.cpp
src/cpp/: DDSTextureLoader.cpp  XTime.cpp  app_calls.cpp  audio.cpp  behavior_tree.cpp  blob.cpp  camera.cpp  component.cpp  component_player.cpp  credits.cpp  cross.cpp  d3d11_renderer_impl.cpp  debug_renderer.cpp  descriptor_setup.cpp  device.cpp  enemy_behaviors.cpp  entities.cpp  game_manager.cpp  game_state.cpp  geometry.cpp  geometry.tpp  gui.cpp  interactible.cpp  level_helper.cpp  levels.cpp  main.cpp  map.cpp  map.tpp  mesh.cpp  message.cpp  minimap.cpp  object.cpp  pipeline.cpp  pipeline.tpp  player_behavior.cpp  raytracing.cpp  search_theta.cpp  super_matrix.cpp  tile.cpp  tutorial.cpp  (+1 more)
src/hpp/: ai_manager.hpp  audio.hpp  behavior_tree.hpp  blob.hpp  bvh.hpp  camera.hpp  collision.hpp  component.hpp  component_box_collision.hpp  component_player.hpp  component_sphere_collision.hpp  credits.hpp  cross.hpp  d3d11_renderer_impl.hpp  debug_renderer.hpp  descriptor_setup.hpp  device.hpp  enemy_behaviors.hpp  entities.hpp  game_manager.hpp  game_objects.hpp  game_state.hpp  geometry.hpp  interactible.hpp  map.hpp  math_types.hpp  mesh.hpp  message.hpp  minimap.hpp  object.hpp  path_tester.hpp  pipeline.hpp  player_behavior.hpp  player_inventory.hpp  pools.hpp  raytracing.hpp  renderer.hpp  search_theta.hpp  super_matrix.hpp  tile.hpp  (+1 more)
src/shader/: bbb.hlsli  mcb.hlsli  ps_billboard.hlsl  ps_coloredvertex.hlsl  ps_cube.hlsl  ps_meshvertex.hlsl  ps_simple.hlsl  ps_smeshvertex.hlsl  scb.hlsli  vs_billboard.hlsl  vs_coloredvertex.hlsl  vs_smeshvertex.hlsl
